deploy: 816243a931bcc572156be6150643e8fbf4e6ffcb

--- a/print.html
+++ b/print.html
@@ -4920,9 +4920,18 @@ The header files for the finishing requests can be found <a href="https://github
 <pre><code class="language-cpp">rmf_task::ConstRequestFactoryPtr finishing_request = nullptr;
 finishing_request = std::make_shared&lt;rmf_task::requests::ChargeBatteryFactory&gt;();
 </code></pre>
-<ul>
-<li>Adding task capabilities and performable actions to the fleet</li>
-</ul>
+<p>Users can now set the initialized task planner parameters with the fleet handle using <code>FleetUpdateHandle::set_task_planner_params</code>.</p>
+<pre><code class="language-cpp">_fleet_handle-&gt;set_task_planner_params(
+    battery_system,
+    motion_sink,
+    ambient_sink,
+    tool_sink,
+    recharge_threshold,
+    recharge_soc,
+    account_for_battery_drain,
+    finishing_request
+)
+</code></pre>
 <p>Use the <code>FleetUpdateHandle</code> to add task capabilities and performable actions to your fleet. For example, if your fleet is able to carry out patrol tasks and teleop actions, you can add them as such:</p>
 <pre><code class="language-cpp">const auto consider =
     [](const nlohmann::json&amp; description,
