deploy: ab2d11fe32b74247c1466a95dcd82ce3ee2019a1

--- a/print.html
+++ b/print.html
@@ -4484,7 +4484,7 @@ Furthermore, each robot's position will be updated live as the robots are moving
 <p>RMF determines the best fleet for the task and responds to the winning bid, i.e. the fleet that is selected. The response contains navigation commands relevant to the delegated task.</p>
 </li>
 <li>
-<p>The fleet adapter will then send the navigation commands to the robot in appropriate API.</p>
+<p>The fleet adapter will then send the navigation commands to the robot using the appropriate API.</p>
 </li>
 </ul>
 <h2 id="tutorials"><a class="header" href="#tutorials">Tutorials</a></h2>
