--- a/integration_fleets_tutorial.html
+++ b/integration_fleets_tutorial.html
@@ -164,7 +164,7 @@
 <p>RMF determines the best fleet for the task and responds to the winning bid, i.e. the fleet that is selected. The response contains navigation commands relevant to the delegated task.</p>
 </li>
 <li>
-<p>The fleet adapter will then send the navigation commands to the robot in appropriate API.</p>
+<p>The fleet adapter will then send the navigation commands to the robot using the appropriate API.</p>
 </li>
 </ul>
 <h2 id="tutorials"><a class="header" href="#tutorials">Tutorials</a></h2>
